# priomgr

./: CHANGELOG.md  CONTRACTS_CHEATSHEET.md  CONTRACTS_EXPLAINED.md  COVERAGE_100_PLAN.md  COVERAGE_ANALYSIS.md  COVERAGE_IMPROVEMENT_RESULTS.md  COVERAGE_RECALCULATION.md  Cargo.toml  FINAL_COVERAGE.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FORMAL_PROPERTIES.md  FORMAL_SPECIFICATION.md  ISABELLE_GUIDE.md  ISABELLE_README.md  ISABELLE_РЕЗУЛЬТАТЫ.md  KANI_PRUSTI_GUIDE.md  KANI_RESULTS.md  KANI_VS_PRUSTI.md  LICENSE  PRIORITY_MANAGER_THY_ANALYSIS.md  PRIORITY_MANAGER_THY_FINAL_ANALYSIS.md  PRIORITY_MANAGER_THY_ULTIMATE_ANALYSIS.md  PROJECT_SCORE.md  PROJECT_SUMMARY.md  PRUSTI_ANALYSIS.md  PRUSTI_FINAL.md  PRUSTI_SUCCESS.md  PriorityManager.cfg  PriorityManager.thy  PriorityManager.tla  PriorityManagerSimple.cfg  PriorityManagerSimple.out  PriorityManagerSimple.thy  PriorityManagerSimple.thy~  PriorityManagerSimple.tla  PriorityManagerSimple_Enhanced.thy  PriorityManagerSimple_Verified.thy  README.md  README_ФИНАЛЬНЫЙ.md  (+36 more)
conf/: config.toml
src/: liveness_monitor.rs  main.rs  verification.rs
systemd/: priority-manager.service
verification_tests/: COVERAGE_BREAKDOWN.md  README.md  SPIN_UPPAAL_GUIDE.md  run_all_tests.sh
verification_tests/adversarial/: Cargo.toml
verification_tests/kani/: Cargo.toml
verification_tests/property_tests/: Cargo.toml
verification_tests/prusti/: Cargo.toml
verification_tests/spin/: SPIN_RESULTS.md  priority_manager.pml  priority_manager.pml.trail  priority_manager_simple.pml
verification_tests/uppaal/: UPPAAL_STATUS.md  (+1 more)
(+5 files in other folders)
