[package]
name = "priority-manager"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Priority Manager Team"]
description = "Formally verified priority management system with 92-94% verification coverage"
license = "MIT"
repository = "https://github.com/yourusername/priority-manager"
keywords = ["formal-verification", "priority", "scheduling", "isabelle", "tla-plus"]
categories = ["algorithms", "concurrency", "development-tools"]
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.27"
libc = "0.2"
nix = { version = "0.26", features = ["sched"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
config = "0.11"
notify = "5.0"
num_cpus = "1.16"
toml = "0.7"

[dev-dependencies]
proptest = "1.0"

# Конфигурация для Kani
[package.metadata.kani]
flags = ["--enable-unstable", "--cbmc-args", "--object-bits", "12"]
unstable = { function-contracts = true }

# Профили для оптимизации верификации
[profile.kani]
inherits = "dev"

[features]
# Feature для Prusti
prusti = []
